--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,14 @@ body {
     width: 70%;
 }
 
+.footer {
+    width: 90%;
+    height: 32px;
+    padding: 20px;
+    margin: 60px auto 0 auto;
+    text-align: center;
+}
+
 @media screen and (max-width: 1024px) {
     .container {
         width: 95%;
